# study-tool

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  test.db
app/: main.py
app/api/: exception_handlers.py  router.py
app/api/routes/: auth.py  health.py  progress.py  quiz.py  study_plan.py  user.py
app/core/: config.py  database.py  dependencies.py  logging.py  security.py
app/domain/: enums.py
app/domain/exceptions/: base.py
app/domain/schemas/: auth.py  progress.py  quiz.py  resource.py  section.py  study_plan.py  token.py  user.py
app/domain/services/: auth.py  gemini.py  progress.py  quiz.py  study_plan.py  user.py
app/persistence/model/: __init__.py  base.py  links.py  progress.py  quiz.py  resource.py  section.py  study_plan.py  token.py  user.py
app/persistence/repository/: __init__.py  base.py  progress.py  quiz.py  resource.py  section.py  study_plan.py  token.py  user.py
app/scripts/: schema_show.py
client/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: Header.tsx  LoginPopover.tsx  RegisterPopover.tsx
client/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
client/src/components/layout/: Navbar.tsx
client/src/components/plans/: CreatePlan.tsx  CreateStudyPlan.tsx  PlanCard.tsx  PlanDetail.tsx  PlanEmptyState.tsx  PlanList.tsx  StudyPlanForm.tsx  StudyPlanTree.tsx
client/src/components/quizzes/: QuestionCard.tsx  QuizGenerateModal.tsx  QuizGeneratePopover.tsx  QuizResultCard.tsx  QuizTimer.tsx
client/src/components/resources/: ResourceCard.tsx  ResourceItem.tsx
client/src/components/sections/: SectionTree.tsx
client/src/components/ui/: Markdown.tsx  color-mode.tsx  dialog.tsx  popover.tsx  sonner.tsx  switch.tsx
client/src/context/: auth-context.ts
client/src/hooks/: use-auth.ts  use-study-plan.ts  use-study-plans.ts
client/src/lib/: api.ts  auth-context.tsx  types.ts
client/src/pages/: About.tsx  Home.tsx  Landing.tsx  Layout.tsx  PlanCreate.tsx  PlanDetail.tsx  PlanEdit.tsx  PlanQuizzes.tsx  QuizTake.tsx  Settings.tsx  UserPlans.tsx
tests/: conftest.py
tests/api/: test_auth.py  test_study_plan.py  test_study_plan_generate.py  test_study_plan_progress.py  test_user.py
tests/domain/: test_auth_service.py  test_complex_progress_service.py  test_progress_service.py  test_quiz_expiration.py  test_quiz_service.py  test_study_plan_service.py  test_user_service.py
tests/persistence/: test_study_plan_repository.py  test_token_repository.py  test_user_repository.py
